<resources>
    <string name="app_name">NeoPark</string>
    <string name="profile_header">Profile</string>
    <string name="app_slogen">Welocome! To  Our Parking\nGuidance System</string>
    <string name="register">Register</string>
    <string name="login_page"><u>Already registered?, Login here</u></string>
    <string name="register_button">Don’t have an account? Sign up here.</string>
    <string name="userId">Email Id</string>
    <string name="userPassword">Password</string>
    <string name="forgetPassword">Forget password?</string>
    <string name="user_login"><u>Continue As User</u></string>
    <string name="admin_login"><u>Continue As Admin</u></string>
    <string name="slogen">Please register to park safely.</string>
    <string name="opendrawer">Open Drawer</string>
    <string name="closedrawer">Close Drawer</string>
    <string name="term_and_cond">By clicking \'Continue,\' you agree to our Terms\nand Conditions of Service </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_web_client_id">your_Id</string>
</resources>